--- a/estiloprueva.css
+++ b/estiloprueva.css
@@ -24,7 +24,7 @@ a {
    HEADER
 ------------------------------ */
 .header {
-    background-color: #222;
+    background-color: (0, 149, 255);
     color: #fff;
     padding: 1rem 0;
     position: relative;
