--- a/Inicio_sesion.css
+++ b/Inicio_sesion.css
@@ -15,7 +15,11 @@ body {
 h1 {
     color: white;
     margin-bottom: 100px;
-    font-size: 125px;
+    font-size: 70px;
+}
+
+h2{
+    color:rgb(0, 158, 0);
 }
 
 
@@ -51,4 +55,10 @@ button {
 
 button:hover {
     background-color: rgb(0, 120, 210);
+}
+
+img {
+    background-color:white;
+    border-radius:200px;
+    margin-top: 100px;
 }
