--- a/estiloprueva.css
+++ b/estiloprueva.css
@@ -200,4 +200,33 @@ footer nav a:hover {
 /* ------------------------------
    RESPONSIVE
 ------------------------------ */
+@media (max-width: 768px) {
 
+    .layout {
+        flex-direction: column;
+    }
+
+    .sidebar {
+        width: 100%;
+    }
+
+    .nav-list {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        height: 100%;
+        width: 250px;
+        background-color: #222;
+        flex-direction: column;
+        padding-top: 5rem;
+        transition: right 0.3s ease;
+    }
+
+    .menu-toggle:checked ~ .nav .nav-list {
+        right: 0;
+    }
+
+    .hamburger {
+        display: block;
+    }
+}
