--- a/Inicio_sesion.css
+++ b/Inicio_sesion.css
@@ -20,6 +20,7 @@ h1 {
 
 h2{
     color:rgb(0, 158, 0);
+    font-size: 20px;
 }
 
 
@@ -27,7 +28,7 @@ form {
     background-color: white;
     padding: 25px;
     border-radius: 10px;
-    width: 300px;
+    width: 600px;
     
 }
 
@@ -57,8 +58,24 @@ button:hover {
     background-color: rgb(0, 120, 210);
 }
 
-img {
+.img_logo {
     background-color:white;
     border-radius:200px;
     margin-top: 100px;
+}
+
+.img_candado{
+    background-color:white;
+    border-radius:200px;
+    width: 40px;
+}
+
+a{
+    font-size: 22.5px;
+    align-items: center;
+}
+
+.comeback{
+    display:block;
+    text-align: center;
 }
