--- a/estiloprueva.css
+++ b/estiloprueva.css
@@ -135,11 +135,11 @@ main {
     flex-grow: 1;
 }
 
-
+/* 🔒 TÍTULO CON TAMAÑO FIJO */
 .product-title {
     font-size: 1rem;
     line-height: 1.3;
-    height: 2.6em;        
+    height: 2.6em;        /* 2 líneas exactas */
     overflow: hidden;
 }
 
@@ -186,8 +186,20 @@ footer {
     color: #fff;
     text-align: center;
     padding: 2rem;
+    
+
 }
 
+  
+.header {
+    grid-area: header;
+}
+.content {
+    grid-area: content;
+}
+footer {
+    grid-area: footer;
+}
 /* ==============================
    RESPONSIVE
 ============================== */
