--- a/Registro.css
+++ b/Registro.css
@@ -19,7 +19,7 @@ h1 {
 
 h2{
     color:rgb(0, 158, 0);
-    font-size: 50px;
+    font-size: 25px;
 }
 
 
@@ -35,34 +35,22 @@ label{
     font-size: 23px;
 }
 
-input {
-    width: 70%;
-    padding: 8px;
-    margin-top: 5px;
-}
 
-.terms {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-size: 16px;
-    margin: 20px 0;
-}
 
 button {
     width: 100%;
-    padding: 50px;
-    background-color: rgb(255, 0, 76);
+    padding: 10px;
+    background-color: rgb(0, 149, 255);
     color: white;
     border: none;
     border-radius: 6px;
-    font-size: 100px;
+    font-size: 30px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: rgb(18, 210, 0);
-    font-size: 50px;
+    background-color: rgb(0, 149, 255);
+    font-size: 30px;
 }
 
 .img_logo {
@@ -88,17 +76,17 @@ a{
 }
 
 .campo {
-    display: block;       /* Hace que cada label ocupe toda la línea */
-    width: 100%;          /* Asegura que el input se alinee al 100% del contenedor */
-    margin-bottom: 15px;  /* Espacio entre campos */
-    font-size: 18px;
+    display: block;       
+    width: 100%;          
+    margin-bottom: 15px;  
+    font-size: 25px;
 }
 
 .campo input {
-    width: 30%;          /* Input ocupa todo el ancho del label */
+    width: 75%;         
     padding: 10px;
-    font-size: 16px;
+    font-size: 25px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-sizing: border-box; /* Evita que padding rompa el ancho */
+    box-sizing: border-box; 
 }
